# src/main/kotlin/ru/rsreu/jackal/api/game/dto/GameModeInfo.kt
@@ -1,6 +1,8 @@
 package ru.rsreu.jackal.api.game.dto
 
 data class GameModeInfo(
+    val id: Long? = null,
     val title: String,
+    val minPlayerNumber: Int,
     val maxPlayerNumber: Int
 )
